--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
     "devDependencies": {
-        "@babel/core": "^7.17.0",
-        "@babel/preset-env": "^7.16.0",
-        "@babel/preset-react": "7.0.0",
+        "@babel/core": "^7.23.2",
+        "@babel/preset-env": "^7.23.2",
+        "@babel/preset-react": "^7.22.15",
         "@hotwired/stimulus": "^3.0.0",
         "@symfony/stimulus-bridge": "^3.2.0",
         "@symfony/webpack-encore": "^4.0.0",
@@ -21,6 +21,7 @@
         "build": "encore production --progress"
     },
     "dependencies": {
+        "babel-loader": "^9.1.3",
         "react": "^18.2.0",
         "react-dom": "^18.2.0"
     }
