Connect React with Symfony successfully

--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
         "build": "encore production --progress"
     },
     "dependencies": {
+        "@babel/plugin-transform-class-properties": "^7.22.5",
         "babel-loader": "^9.1.3",
         "react": "^18.2.0",
         "react-dom": "^18.2.0"
