--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
         "@babel/plugin-transform-class-properties": "^7.22.5",
         "babel-loader": "^9.1.3",
         "react": "^18.2.0",
-        "react-dom": "^18.2.0"
+        "react-dom": "^18.2.0",
+        "react-router-dom": "^6.18.0"
     }
 }
