--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     },
     "dependencies": {
         "@babel/plugin-transform-class-properties": "^7.22.5",
+        "axios": "^1.6.0",
         "babel-loader": "^9.1.3",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
