Add adding new post option

--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -34,6 +34,9 @@ security:
     access_control:
         # - { path: ^/admin, roles: ROLE_ADMIN }
         - { path: ^/api/profile, roles: ROLE_USER }
+        - { path: ^/api/login, roles: ROLE_USER }
+        - { path: ^/api/registration, roles: ROLE_USER }
+        - { path: ^/api/posts/create, roles: ROLE_ADMIN }
 
 
 when@test:
