--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -22,6 +22,10 @@ security:
                 check_path: api_login
             logout:
                 path: app_logout
+            remember_me:
+                secret: '%kernel.secret%' # required
+                lifetime: 604800 # 1 week in seconds
+                signature_properties: ['password', 'email']
 
             # activate different ways to authenticate
             # https://symfony.com/doc/current/security.html#the-firewall
