--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
         "doctrine/orm": "^2.16",
         "fakerphp/faker": "*",
         "imagine/imagine": "^1.2",
+        "knplabs/knp-paginator-bundle": "^6.2",
         "symfony/console": "6.3.*",
         "symfony/dotenv": "6.3.*",
         "symfony/flex": "^2",
