--- a/composer.json
+++ b/composer.json
@@ -21,6 +21,7 @@
         "symfony/monolog-bundle": "^3.0",
         "symfony/runtime": "6.3.*",
         "symfony/security-bundle": "6.3.*",
+        "symfony/translation": "6.3.*",
         "symfony/webpack-encore-bundle": "1.14.0",
         "symfony/yaml": "6.3.*"
     },
