--- a/composer.json
+++ b/composer.json
@@ -11,12 +11,15 @@
         "doctrine/doctrine-migrations-bundle": "^3.2",
         "doctrine/orm": "^2.16",
         "fakerphp/faker": "*",
+        "gedmo/doctrine-extensions": "^3.13",
         "imagine/imagine": "^1.2",
         "knplabs/knp-paginator-bundle": "^6.2",
         "symfony/console": "6.3.*",
         "symfony/dotenv": "6.3.*",
         "symfony/flex": "^2",
         "symfony/framework-bundle": "6.3.*",
+        "symfony/google-mailer": "6.3.*",
+        "symfony/mailer": "6.3.*",
         "symfony/mime": "6.3.*",
         "symfony/monolog-bundle": "^3.0",
         "symfony/runtime": "6.3.*",
